Android WebView: Always send memory policy from Browser to Renderer.

Early out on the Browser side does not work because the IPC message send could
succeed even if the output surface in question is not yet bound to client and
registered with the SynchronousCompositorRegistry.

BUG=613781

Review-Url: https://codereview.chromium.org/2035993003
Cr-Commit-Position: refs/heads/master@{#398460}